--- a/index.html
+++ b/index.html
@@ -27,27 +27,26 @@
         <img src="https://placehold.co/400x250" alt="Imagem exemplo" />
         <div class="secao-conteudo">
           <h2>Seção Um</h2>
-          <p>Este é um texto simples expliacanod conteudo</p>
+          <p>Este é um texto simples expliacando conteudo</p>
         </div>
       </section>
       <section class="secao">
         <img src="https://placehold.co/400x250" alt="Imagem exemplo" />
-        <div>
+        <div class="secao-conteudo">
           <h2>Seção Dois</h2>
           <p>Este é um outro exemplo de conteúdo e imagem</p>
         </div>
       </section>
       <section class="secao">
         <img src="https://placehold.co/400x250" alt="Imagem exemplo" />
-        <div>
+        <div class="secao-conteudo">
           <h2>Seção Três</h2>
           <p>Esta é a última seção antes do rodapé</p>
         </div>
       </section>
-
     </main>
     <footer class="footer">
-        <p>&copy; 2026 - Site Básico para Iniciante</p>
+      <p>&copy; 2026 - Site Básico para Iniciante</p>
     </footer>
   </body>
 </html>
